envoygateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
 name: envoy
spec:
 controllerName: gateway.envoyproxy.io/gatewayclass-controller

---

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway 
metadata:
 name: demogateway
 namespace: envoy

spec: 
 gatewayClassName: envoy
 listeners:
  - name: http 
    protocol: HTTP
    port: 80
    allowedRoutes:
     namespaces:
      from: All 
# hhtp route

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
 name: httpbinr
 namespace: envoy

spec:
 parentRefs:
 - name: demogateway
 rules:
 - matches:
   - path: 
       type: PathPrefix
       value: /
   backendRefs:
    - name: binservice
      port: 80
